# dummy-lib

./: CMakeLists.txt  DOWNSTREAM_TEMPLATE.yaml  DOWNSTREAM_UPDATES.md
.github/workflows/: downstream-sync.yaml  notify_downstreams.yaml
dummy_lib/: CMakeLists.txt
dummy_lib/include/dummy_lib/: header.h
dummy_lib/src/: code.cc  private_code.cc  public_code.cc
dummy_lib/src/include/internal/dummy_lib/: header.h
